# slipstream

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP.md  pyproject.toml  ruff.toml
.github/workflows/: pr-review.yml
scripts/: cli.py
src/slipstream/: __init__.py  settings.py
src/slipstream/analysis/: __init__.py  query.py
src/slipstream/garmin/: README.md  __init__.py  ble_scanner.py  display.py  hr_monitor.py  recorder.py
src/slipstream/ingest/: __init__.py  auth.py  backfill.py  strava.py
src/slipstream/web/: __init__.py  app.py  models.py
src/slipstream/web/static/: index.html
