[tool.poetry]
name = "slipstream"
version = "0.1.0"
description = "Cycling data analysis and ingestion tooling"
authors = ["Jingwei Kang"]
packages = [{ include = "slipstream", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"
click = "^8.1.7"
pydantic = "^2.12.5"
pydantic-settings = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
